--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>As plataformas de telemedicina</title>
+    <title>As platafromas telemedicina</title>
 </head>
 
 <body>
     <div class="caixa-principal">
-        <h1>Você decide o futuro da IA</h1>
+        <h1>As plataformas telemedicina</h1>
         <div class="caixa-pergunta"></div>
         <div class="caixa-alternativa"></div>
         <div class="caixa-resultado">
